--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in"><b>¯\_(ツ)_/¯<b></div>
+          <div class="intro-lead-in"><b>¯\_(ツ)_/¯</b></div>
           <div class="intro-heading text-uppercase">Meet Brooklynn</div>
           <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
         </div>
