--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/David.jpg" alt="">
               <h4>David Kim</h4>
               <p class="text-muted">David Kim is a senior in ECE with interests in software and hardware. He likes to play basketball and also likes to play the drums during his free time. He enjoys listening to music and has some interests in musical instruments and music in general.</p>
             </div>
