--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="intro-text">
           <div class="intro-lead-in"><b>¯\_(ツ)_/¯</b></div>
           <div class="intro-heading text-uppercase">Meet Brooklynn</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#milestone1">Tell Me More</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#lab1">Tell Mee</a>
         </div>
       </div>
     </header>
