--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         <div class="intro-text">
           <div class="intro-lead-in"><b>¯\_(ツ)_/¯</b></div>
           <div class="intro-heading text-uppercase">Meet Brooklynn</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#lab1">Tell Mee</a>
+          <button class="btn btn-primary btn-xl" data-toggle="modal" data-target="#lab1"type="button">
+                    <i class="fa fa-times"></i>
+                    Close</button>
         </div>
       </div>
     </header>
