--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
         <div class="intro-text">
           <div class="intro-lead-in"><b>¯\_(ツ)_/¯</b></div>
           <div class="intro-heading text-uppercase">Meet Brooklynn</div>
-          <button class="btn btn-primary btn-xl" data-toggle="modal" data-target="#lab1"type="button">
-                    <i class="fa fa-times"></i>
-                    Close</button>
+          <button class="btn btn-primary btn-xl" type="button" data-toggle="modal" data-target="#lab1">
+            Close
+            <i class="fa fa-times"></i>
+            </button>
         </div>
       </div>
     </header>
