--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
         <div class="intro-text">
           <div class="intro-lead-in"><b>¯\_(ツ)_/¯</b></div>
           <div class="intro-heading text-uppercase">Meet Brooklynn</div>
-          <button class="btn btn-primary btn-xl" type="button" data-toggle="modal" data-target="#lab1">
-            Close
-            <i class="fa fa-times"></i>
+          <a class="btn btn-primary btn-xl" href=https://github.com/sofyacalvin/ece3400-group3>Github</a>
             </button>
         </div>
       </div>
