--- a/index.html
+++ b/index.html
@@ -2330,7 +2330,7 @@ end
     </div>
     
     <!-- Final Competition -->
-    <div class="team-modal modal fade" id="Final" tabindex="-1" role="dialog" aria-hidden="true">
+   <div class="portfolio-modal modal fade" id="Final" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
