--- a/index.html
+++ b/index.html
@@ -2421,7 +2421,7 @@ end
                         <td>$21</td>
                       </tr>
                       <tr>
-                        <td>Parallax Servo>
+                        <td>Parallax Servo</td>
                         <td>$13</td>
                         <td>2</td>
                         <td>$26</td>
@@ -2439,6 +2439,12 @@ end
                         <td>$33.98</td>
                       </tr>
                       <tr>
+                        <td>Shipping & Taxes</td>
+                        <td>$4.79</td>
+                        <td></td>
+                        <td>4.79</td>
+                      </tr>
+                      <tr>               
                         <th>Total</th>
                         <th></th>
                         <th></th>
